--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
-port: 4001
 url: https://beta.carpentries.org
 plugins:
   - jekyll-assets
+exclude:
+  - README.md
 assets:
   #compress:
     #css:  scss
