Update sponsor URLs and add posit
I've updated the urls for each sponsor or granting organisation so that these images can be clickable. I've added the updated logo image name for Posit.

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -3,22 +3,22 @@ sponsors:
 - name: 'Gordon & Betty Moore Foundation'
   logo: moore-logo
   active: true  
-  url: ""
+  url: "https://www.moore.org/"
 
 - name: Alfred P Sloan Foundation
   logo: alfred-sloan-logo
   active: true  
-  url: ""
+  url: "https://sloan.org/"
   
 - name: Chan Zuckerberg Initaitive
   logo: chan-zuck-logo
   active: true
-  url: ""
+  url: "https://chanzuckerberg.com/"
 
 - name: Posit
-  logo: r-studio-logo
+  logo: posit-logo
   active: true 
-  url: ""
+  url: "https://posit.co/"
 
 - name: Rackspace
   logo: rackspace-logo
